modified:   README modified:   pom.xml new file:   src/main/java/ru/intf/sasha/ai/GigaChatAIAgent.java new file:   src/main/java/ru/intf/sasha/config/RestTemplateConfig.java modified:   src/main/java/ru/intf/sasha/config/SecurityConfig.java modified:   src/main/java/ru/intf/sasha/controller/CoffeeApiController.java new file:   src/main/java/ru/intf/sasha/dto/gigachat/AuthRequestDTO.java new file:   src/main/java/ru/intf/sasha/dto/gigachat/AuthResponseDTO.java new file:   src/main/java/ru/intf/sasha/dto/gigachat/GigaChatMessageDTO.java new file:   src/main/java/ru/intf/sasha/dto/gigachat/GigaChatRequestDTO.java new file:   src/main/java/ru/intf/sasha/dto/gigachat/GigaChatResponseDTO.java modified:   src/main/java/ru/intf/sasha/service/CoffeeService.java modified:   src/main/resources/application.properties modified:   src/main/resources/static/css/styles.css modified:   src/main/resources/static/js/scripts.js modified:   src/main/resources/templates/index.html

--- a/README
+++ b/README
@@ -24,3 +24,5 @@
         -srcstorepass 
 - добавлена конфигурация для прокси на 443 порт через Nginx www.coffeeandteamenu.ru
 - добавлена конфигурация systemd unit и sh script для запуска приложения start.sh и coffeeandteamenu.service
+- реализована интеграция с GigaChat
+- в application.properties вынесены конфиги для подключения
