--- a/README
+++ b/README
@@ -24,5 +24,5 @@
         -srcstorepass 
 - добавлена конфигурация для прокси на 443 порт через Nginx www.coffeeandteamenu.ru
 - добавлена конфигурация systemd unit и sh script для запуска приложения start.sh и coffeeandteamenu.service
-- реализована интеграция с GigaChat
+- реализована интеграция с GigaChat GigaChatAIAgent
 - в application.properties вынесены конфиги для подключения
